[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/Cenario crossy road.png" type="Texture" id=1]
[ext_resource path="res://scenes/fase 2/tutorial_crossy.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/sprite do personagem.png" type="Texture" id=4]
[ext_resource path="res://sprites/casinha do balacobaco.png" type="Texture" id=5]
[ext_resource path="res://scenes/scripts/fase 2/crossingroad_scene.gd" type="Script" id=6]
[ext_resource path="res://scenes/scripts/fase 2/personagem.gd" type="Script" id=7]
[ext_resource path="res://sprites/esquerda.png" type="Texture" id=8]
[ext_resource path="res://sprites/direita.png" type="Texture" id=9]
[ext_resource path="res://sprites/cima.png" type="Texture" id=10]
[ext_resource path="res://sprites/baixo.png" type="Texture" id=11]
[ext_resource path="res://sprites/button play.png" type="Texture" id=12]
[ext_resource path="res://sprites/pausar .png" type="Texture" id=13]
[ext_resource path="res://sprites/button casinha .png" type="Texture" id=14]

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 1800, 3200, -1800, 3200 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 1800, 3200, 1800, -3200 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, -1800, 3200, -1800, -3200 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 1450, -2600, -1800, -3200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61.875, 41.375 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 7 )

[sub_resource type="Animation" id=3]
resource_name = "andar para direita"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "andar para esquerda"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "andar para frente"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "andar para trás"
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Personagem/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 106.75, 10 )

[node name="crossingroad" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 292.0, 662.0 ],
"_edit_vertical_guides_": [ 334.0, -155.0 ]
}

[node name="mapa" type="Node" parent="."]

[node name="ruas" type="Node" parent="mapa"]

[node name="CenarioCrossyRoad" type="Sprite" parent="mapa/ruas"]
position = Vector2( 180, 320.5 )
scale = Vector2( 1.33333, 1.33125 )
z_index = -1
texture = ExtResource( 1 )

[node name="baixo" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 11 )
shape = SubResource( 8 )

[node name="direita" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 9 )
shape = SubResource( 9 )

[node name="esquerda" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 8 )
shape = SubResource( 10 )

[node name="cima" type="TouchScreenButton" parent="mapa/ruas"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 10 )
shape = SubResource( 11 )

[node name="casa" type="Area2D" parent="mapa"]
position = Vector2( 83, 302 )
__meta__ = {
"_edit_group_": true
}

[node name="casa2" type="Sprite" parent="mapa/casa"]
position = Vector2( -2.3334, 0.666603 )
scale = Vector2( 0.445834, 0.470833 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapa/casa"]
position = Vector2( -3, 0 )
shape = SubResource( 2 )

[node name="Personagem" type="KinematicBody2D" parent="mapa"]
position = Vector2( 180, 610 )
z_index = 2
script = ExtResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="mapa/Personagem"]
position = Vector2( -0.5, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="mapa/Personagem"]
position = Vector2( 2, -2 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 4 )
hframes = 4
vframes = 4
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="mapa/Personagem"]
"anims/andar para direita" = SubResource( 3 )
"anims/andar para esquerda" = SubResource( 4 )
"anims/andar para frente" = SubResource( 5 )
"anims/andar para trás" = SubResource( 6 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( -22, 386 )

[node name="Barreira" type="StaticBody2D" parent="."]
position = Vector2( 294, 301 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barreira"]
position = Vector2( -43.75, -1 )
shape = SubResource( 7 )

[node name="FundoPause" type="Sprite" parent="."]
pause_mode = 2
visible = false
z_index = 5

[node name="ColorRect" type="ColorRect" parent="FundoPause"]
margin_left = -1.0
margin_top = -3.0
margin_right = 387.0
margin_bottom = 659.0
color = Color( 0.611765, 0.67451, 0.705882, 1 )

[node name="Button3" type="Button" parent="FundoPause"]
margin_left = 219.0
margin_top = 98.0
margin_right = 7143.0
margin_bottom = 7016.0
rect_scale = Vector2( 0.0126425, 0.0126425 )
icon = ExtResource( 14 )

[node name="Button2" type="Button" parent="FundoPause"]
margin_left = 78.0
margin_top = 100.0
margin_right = 7040.0
margin_bottom = 7018.0
rect_scale = Vector2( 0.0124347, 0.0124347 )
text = "voltar"
icon = ExtResource( 12 )

[node name="HSlider" type="HSlider" parent="FundoPause"]
margin_left = 77.0
margin_top = 241.0
margin_right = 317.0
margin_bottom = 270.0

[node name="Label" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 136.0
margin_top = 295.0
margin_right = 275.0
margin_bottom = 316.0

[node name="Label2" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 134.0
margin_top = 375.0
margin_right = 262.0
margin_bottom = 389.0

[node name="Pausar" type="Button" parent="."]
margin_left = 299.0
margin_top = 11.0
margin_right = 7267.0
margin_bottom = 6929.0
rect_scale = Vector2( 0.00596626, 0.00596626 )
text = "pausar"
icon = ExtResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 2 )]

[connection signal="pressed" from="mapa/ruas/baixo" to="mapa/Personagem" method="_on_baixo_pressed"]
[connection signal="released" from="mapa/ruas/baixo" to="mapa/Personagem" method="_on_baixo_released"]
[connection signal="pressed" from="mapa/ruas/direita" to="." method="_on_direita_pressed"]
[connection signal="pressed" from="mapa/ruas/direita" to="mapa/Personagem" method="_on_direita_pressed"]
[connection signal="released" from="mapa/ruas/direita" to="." method="_on_direita_released"]
[connection signal="released" from="mapa/ruas/direita" to="mapa/Personagem" method="_on_direita_released"]
[connection signal="pressed" from="mapa/ruas/esquerda" to="mapa/Personagem" method="_on_esquerda_pressed"]
[connection signal="released" from="mapa/ruas/esquerda" to="mapa/Personagem" method="_on_esquerda_released"]
[connection signal="pressed" from="mapa/ruas/cima" to="mapa/Personagem" method="_on_cima_pressed"]
[connection signal="released" from="mapa/ruas/cima" to="mapa/Personagem" method="_on_cima_released"]
[connection signal="body_entered" from="mapa/casa" to="mapa/Personagem" method="_on_casa_body_entered"]
[connection signal="pressed" from="FundoPause/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="FundoPause/Button2" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="FundoPause/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Pausar" to="." method="_on_Pausar_pressed"]
